--- a/page2.html
+++ b/page2.html
@@ -11,7 +11,7 @@
 		<link rel="shortcut icon" type="image/jpg" href="img/favicon.jpg">
 	
     
-	<script src="./js/jquery-2.1.0.min.js"></script>
+	<script src="./js/jquery-2.1.0.js"></script>
 	<script src="./js/bootstrap.min.js"></script>
 	<script src="./js/blocs.min.js"></script>
 	<script src="./js/jqBootstrapValidation.js"></script>
@@ -162,9 +162,9 @@
 <!-- Principal conteneur END -->
     <!-- Scripts -->
 	  <script src="js/jquery-2.1.0.js"></script>
-      <script async src="js/bootstrap.js"></script>
-      <script async src="js/blocs.js"></script>
-      <script async src="js/jquery.touchSwipe.js"></script>
+      <script src="js/bootstrap.js"></script>
+      <script src="js/blocs.js"></script>
+      <script src="js/jquery.touchSwipe.js"></script>
 	  <script src="./js/jqBootstrapValidation.js"></script>
 	  <script src="./js/formHandler.js"></script>
 
