correction et ajout de liens menu page2 en contact

--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 
-		<title>Première Agence Web Design à Lyon Contact</title><title>page2</title>
+		<title>Première Agence Web Design à Lyon Contact</title>
 	</head>
 <body>
 <!-- Principal conteneur -->
@@ -33,22 +33,18 @@
 					</div>
 					<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 						<ul class="site-navigation nav navbar-nav">
-							<li>
-								<a href="index.html">Accueil</a>
-							</li>
-							<li>
-							</li>
-							<li>
-								<a href="page2.html">page2 &gt;</a>
-							</li>
-						</ul>
+							<li><a href="index.html" title="Bienvenus">Accueil</a></li>
+							<li><a href="#bloc-4-portfolio" title="Visitez notre portfolio">Portfolio</a></li>
+							<li><a href="#bloc-2-services" title="Nos compétences">Expertise</a></li>
+							<li><a href="contact.html" title="Contactez-nous">Contact</a></li>
+						  </ul>
 					</div>
 				</nav>
 			</div>
 		</section>
 		<!-- bloc-0 END -->
 		<!-- bloc-6 -->
-		<div section="bloc bg-dots-bg bg-repeat bgc-atomic-tangerine d-bloc bloc-bg-texture texture-paper" id="bloc-6">
+		<section class="bloc bg-dots-bg bg-repeat bgc-atomic-tangerine d-bloc bloc-bg-texture texture-paper" id="bloc-6">
 			<div class="container bloc-lg">
 				<div class="row">
 					<div class="col-sm-12">
@@ -144,8 +140,10 @@
 				</div>
 			</div>
 		</div>
-	</footer>
+	</div>
 	<!-- Footer - bloc-8 END -->
+	</footer>
+	</div>
 	<!-- Principal conteneur END -->
     <!-- Scripts -->
 	  <script src="js/jquery-2.1.0.js"></script>
