--- a/index.html
+++ b/index.html
@@ -35,14 +35,10 @@
 					</div>
 					<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 						<ul class="site-navigation nav navbar-nav">
-							<li>
-								<a href="index.html">Accueil</a>
-							</li>
-							<li>
-							</li>
-							<li>
-								<a href="page2.html">page2 &gt;</a>
-							</li>
+							<li><a href="index.html" title="Bienvenus">Accueil</a></li>
+							<li><a href="#bloc-4-portfolio" title="Visitez notre portfolio">Portfolio</a></li>
+							<li><a href="#bloc-2-services" title="Nos compétences">Expertise</a></li>
+							<li><a href="contact.html" title="Contactez-nous">Contact</a></li>
 						</ul>
 					</div>
 				</nav>
@@ -59,7 +55,7 @@
 							Agence La Panthère
 						</h1>
 						<div class="text-center">
-							<a href="page2.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
+							<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
 						</div>
 					</div>
 				</div>
@@ -127,7 +123,7 @@
 							Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients .<br>
 						</h2>
 						<p class="text-center white">
-							Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br><a class="ltc-white bold-link" href="page2.html">Contactez notre équipe</a><br>
+							Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br><a class="ltc-white bold-link" href="contact.html">Contactez notre équipe</a><br>
 						</p>
 					</div>
 				</div>
@@ -193,7 +189,7 @@
 						Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
 					</h2>
 					<div class="col-sm-12 text-center">
-						<a href="page2.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
+						<a href="contact.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
 					</div>
 				</div>
 			</div>
@@ -201,8 +197,9 @@
 	</main>
 	<!-- bloc-5-cta END -->
 	<!-- Footer - bloc-8 -->
-	<footer class="container bloc-sm">
-		<div class="row">
+	<footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
+		<div class="container bloc-sm">
+			<div class="row">
 			<div class="col-sm-12">
 				<p class="text-center white">
 					Agence La Panthère - Agence web basée à Lyon.<br>
