--- a/contact.html
+++ b/contact.html
@@ -33,11 +33,11 @@
 					</div>
 					<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 						<ul class="site-navigation nav navbar-nav">
-							<li><a href="index.html" title="Bienvenus">Accueil</a></li>
-							<li><a href="#bloc-4-portfolio" title="Visitez notre portfolio">Portfolio</a></li>
-							<li><a href="#bloc-2-services" title="Nos compétences">Expertise</a></li>
-							<li><a href="contact.html" title="Contactez-nous">Contact</a></li>
-						  </ul>
+							<li><a href="index.html">Accueil</a></li>
+							<li><a href="index.html#bloc-4-portfolio" title="Visitez notre Portfolio">Portfolio</a></li>
+							<li><a href="index.html#bloc-2-services" title="Nos compétences">Expertise</a></li>
+							<li><a href="contact.html#form_1" title="formulaire de contact">Contact</a></li>
+						</ul>
 					</div>
 				</nav>
 			</div>
