--- a/contact.html
+++ b/contact.html
@@ -107,44 +107,27 @@
 		<a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
 		<!-- ScrollToTop Button END-->
 	</main>
+	<!-- Principal conteneur END -->
 	<!-- Footer - bloc-8 -->
 	<footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
 		<div class="container bloc-sm">
 			<div class="row">
-				<div class="col-sm-12">
-					<p class="text-center white">
-						Agence La Panthère - Agence web basée à Lyon.<br>
-					</p>
-					<div class="row row-no-gutters social">
-						<div class="col-sm-3">
-							<div class="text-center">
-								<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
-							</div>
-						</div>
-						<div class="col-sm-3">
-							<div class="text-center">
-								<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
-							</div>
-						</div>
-						<div class="col-sm-3">
-							<div class="text-center">
-								<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
-							</div>
-						</div>
-						<div class="col-sm-3">
-							<div class="text-center">
-								<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
-							</div>
-						</div>
-					</div>
+				<p class="text-center white">Agence Web Design La Panthère</p>
+				<p class="text-center white">contact@agencelapanthere.com<br />2 place Sathonay 69001 Lyon</p>
+				<div class="row row-no-gutters social">
+					<a class="social" href="https://twitter.com/" aria-label="Twitter" title="Suivez-nous sur Twitter"
+					target="_blank"><i class="fa fa-twitter icon-md"></i></a>
+					<a class="social" href="https://fr-fr.facebook.com/" aria-label="Facebook"
+					title="Suivez-nous sur Facebook" target="_blank"><i class="fa fa-facebook icon-md"></i></a>
+					<a class="social" href="https://dribbble.com/" aria-label="Dribble" title="Suivez-nous sur Dribble"
+					target="_blank"><i class="fa fa-dribbble icon-md"></i></a>
+					<a class="social" href="https://www.instagram.com/" aria-label="Instagram"
+					title="Suivez-nous sur Instagram" target="_blank"><i class="fa fa-instagram icon-md"></i></a>
 				</div>
 			</div>
 		</div>
-	</div>
+    </footer>
 	<!-- Footer - bloc-8 END -->
-	</footer>
-	</div>
-	<!-- Principal conteneur END -->
     <!-- Scripts -->
 	  <script src="js/jquery-2.1.0.js"></script>
       <script src="js/bootstrap.js"></script>
@@ -152,6 +135,5 @@
       <script src="js/jquery.touchSwipe.js"></script>
 	  <script src="./js/jqBootstrapValidation.js"></script>
 	  <script src="./js/formHandler.js"></script>
-
 </body>
 </html>
