--- a/index.html
+++ b/index.html
@@ -26,9 +26,7 @@
 			<div class="container bloc-sm">
 				<nav class="navbar row">
 					<div class="navbar-header">
-						<div class="keywords" style="color:#cccccc;font-size:1px;">Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
 						<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="paris web design logo agence web meilleure agence" height="40" /></a>
-						<div class="keywords" style="color:#cccccc;font-size:1px;">Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
 						<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 							<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 						</button>
@@ -194,88 +192,33 @@
 				</div>
 			</div>
 		</section>
+		<!-- bloc-5-cta END -->
 	</main>
-	<!-- bloc-5-cta END -->
+	<!-- Principal conteneur END -->
 	<!-- Footer - bloc-8 -->
 	<footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
 		<div class="container bloc-sm">
 			<div class="row">
-			<div class="col-sm-12">
-				<p class="text-center white">
-					Agence La Panthère - Agence web basée à Lyon.<br>
-				</p>
+				<p class="text-center white">Agence Web Design La Panthère</p>
+				<p class="text-center white">contact@agencelapanthere.com<br />2 place Sathonay 69001 Lyon</p>
 				<div class="row row-no-gutters social">
-					<div class="col-sm-3">
-						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-twitter icon-md"></span></a>
-						</div>
-					</div>
-					<div class="col-sm-3">
-						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-facebook icon-md"></span></a>
-						</div>
-					</div>
-					<div class="col-sm-3">
-						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-dribbble icon-md"></span></a>
-						</div>
-					</div>
-					<div class="col-sm-3">
-						<div class="text-center">
-							<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
-						</div>
-					</div>
-					<div class="keywords" style="color:#F3976C;">Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
-				</div>
-					<div class="row">
-						<div class="col-sm-4">
-							Partenaires
-								<ul>
-									<li><a href="voiture.com">voiture.com</a></li>
-									<li><a href="pizza.com">pizza.com</a></li>
-									<li><a href="matoiture.com">matoiture.com</a></li>
-									<li><a href="immobilierseo.com">immobilierseo.com</a></li>
-								</ul>		
-						</div>
-						<div class="col-sm-4">
-							Annuaires liste 1
-							<ul>
-								<li><a href="annuaireagence.com">annuaireagence.com</a></li>
-								<li><a href="annuaireseo.com">annuaireseo.com</a></li>
-								<li><a href="annuairemarketing.com">annuairemarketing.com</a></li>
-								<li><a href="123seoture.com">123seo.com</a></li>
-								<li><a href="123site.com">123site.com</a></li>
-								<li><a href="annuairewordpress.com">annuairewordpress.com</a></li>
-								<li><a href="listeagence.com">listeagence.com</a></li>
-								<li><a href="meilleuresagencesparis.com">meilleuresagencesparis.com</a></li>
-								<li><a href="listeseo.com">listeseo.com</a></li>
-							</ul>
-						</div>
-						<div class="col-sm-4">
-							Annuaires liste 2
-							<ul>
-								<li><a href="betterseo.com">betterseo.com</a></li>
-								<li><a href="ameliorerseo.com">ameliorerseo.com</a></li>
-								<li><a href="seojuicelien.com">seojuicelien.com</a></li>
-								<li><a href="meilleursliens.com">meilleursliens.com</a></li>
-								<li><a href="liensagogo.com">liensagogo.com</a></li>
-								<li><a href="backlink.com">backlink.com</a></li>
-								<li><a href="linkjuiceannuaire.com">linkjuiceannuaire.com</a></li>
-								<li><a href="remontersurgoogle.com">remontersurgoogle.com</a></li>
-								<li><a href="vraiseofiable.com">vraiseofiable.com</a></li>
-							</ul>
-						</div>
-					</div>
+					<a class="social" href="https://twitter.com/" aria-label="Twitter" title="Suivez-nous sur Twitter"
+					target="_blank"><i class="fa fa-twitter icon-md"></i></a>
+					<a class="social" href="https://fr-fr.facebook.com/" aria-label="Facebook"
+					title="Suivez-nous sur Facebook" target="_blank"><i class="fa fa-facebook icon-md"></i></a>
+					<a class="social" href="https://dribbble.com/" aria-label="Dribble" title="Suivez-nous sur Dribble"
+					target="_blank"><i class="fa fa-dribbble icon-md"></i></a>
+					<a class="social" href="https://www.instagram.com/" aria-label="Instagram"
+					title="Suivez-nous sur Instagram" target="_blank"><i class="fa fa-instagram icon-md"></i></a>
 				</div>
 			</div>
 		</div>
-	</footer>
-		<!-- Footer - bloc-8 END -->
-		<!-- Principal conteneur END -->
-			<!-- Scripts -->
-			<script src="js/jquery-2.1.0.js"></script>
-			<script src="js/bootstrap.js"></script>
-			<script src="js/blocs.js"></script>
-			<script src="js/jquery.touchSwipe.js"></script>
+    </footer>
+	<!-- Footer - bloc-8 END -->
+	<!-- Scripts -->
+	<script src="js/jquery-2.1.0.js"></script>
+	<script src="js/bootstrap.js"></script>
+	<script src="js/blocs.js"></script>
+	<script src="js/jquery.touchSwipe.js"></script>
 </body>
 </html>
