--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="Default">
+<html lang="fr">
 <head>
     <meta charset="utf-8">
 	<meta name="description" content=" A Lyon, La Panthère est une agence de web design dotée d’une équipe de graphistes talentueux. Après étude sérieuse de vos objectifs commerciaux, l’agence aide votre entreprise à créer son site internet unique pour se démarquer de vos concurrents.">
