--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,6 @@
 		
 		<link rel="canonical" href="https://lysianebo.github.io/LaPanthere/">
 		<link rel="shortcut icon" type="image/jpg" href="img/favicon.jpg">
-	
     
 		<link rel="stylesheet" type="text/css" href="css/et-line.css">
 		<link rel="stylesheet" type="text/css" href="css/font-awesome.css">
@@ -19,21 +18,47 @@
 		<title>Première Agence Web Design à Lyon Contact</title>
 	</head>
 <body>
-<!-- Principal conteneur -->
+<!-- Principal conteneur --><div class="form-group">
+								<label for="name">Nom</label>
+								<input id="name" class="form-control" required>
+							</div>
+							<div class="form-group">
+								<label for="email">
+									Adresse email
+								</label>
+								<input id="email" class="form-control" type="email" required>
+							</div>
+							<div class="form-group">
+								<label for="input_504">
+									Comment nous avez-vous connu ?
+								</label>
+								<input class="form-control" type="email" required id="input_504">
+							</div>
+							<div class="form-group">
+								<label for="message">
+									Brief de votre projet (Ajoutez autant de détails que nécessaire)<br>
+								</label><textarea id="message" class="form-control" rows="4" cols="50" required></textarea>
+							</div>
+							<div class="text-center"> 
+								<button class="bloc-button btnbtn-clean btn-rd cta-hero btn-atomic-tangerine" type="submit">
+								Envoyer
+								</button>
+							</div>
+						</form>
 	<main class="page-container">
 		<!-- bloc-0 -->
 		<section class="bloc bgc-white l-bloc " id="bloc-0">
 			<div class="container bloc-sm">
 				<nav class="navbar row">
 					<div class="navbar-header">
-						<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="atlanta web design logo" height="40" /></a>
+						<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="logo de l'entreprise webdesign la panthère" height="40" /></a>
 						<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 							<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 						</button>
 					</div>
 					<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 						<ul class="site-navigation nav navbar-nav">
-							<li><a href="index.html">Accueil</a></li>
+							<li><a href="index.html#presentation" title="Présentation de l'Agence la panthère">Accueil</a></li>
 							<li><a href="index.html#bloc-4-portfolio" title="Visitez notre Portfolio">Portfolio</a></li>
 							<li><a href="index.html#bloc-2-services" title="Nos compétences">Expertise</a></li>
 							<li><a href="contact.html#form_1" title="formulaire de contact">Contact</a></li>
@@ -67,31 +92,31 @@
 					<div class="col-sm-6">
 						<form id="form_1" novalidate success-msg="Your message has been sent." fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
 							<div class="form-group">
-								<label>
-									Nom
-								</label>
-								<input id="name" class="form-control" required />
+								<label for="name">Nom</label>
+								<input id="name" class="form-control" required>
 							</div>
 							<div class="form-group">
-								<label>
+								<label for="email">
 									Adresse email
 								</label>
-								<input id="email" class="form-control" type="email" required />
+								<input id="email" class="form-control" type="email" required>
 							</div>
 							<div class="form-group">
-								<label>
+								<label for="input_504">
 									Comment nous avez-vous connu ?
 								</label>
-								<input class="form-control" type="email" required id="input_504" />
+								<input class="form-control" type="email" required id="input_504">
 							</div>
 							<div class="form-group">
-								<label>
+								<label for="message">
 									Brief de votre projet (Ajoutez autant de détails que nécessaire)<br>
 								</label><textarea id="message" class="form-control" rows="4" cols="50" required></textarea>
-							</div> 
-							<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
+							</div>
+							<div class="text-center"> 
+								<button class="bloc-button btnbtn-clean btn-rd cta-hero btn-atomic-tangerine" type="submit">
 								Envoyer
-							</button>
+								</button>
+							</div>
 						</form>
 					</div>
 					<div class="col-sm-6">
