--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
 			<div class="container bloc-sm">
 				<nav class="navbar row">
 					<div class="navbar-header">
-						<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="paris web design logo agence web meilleure agence" height="40" /></a>
+						<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="logo de l'entreprise webdesign la panthère" height="40" /></a>
 						<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 							<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 						</button>
 					</div>
 					<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 						<ul class="site-navigation nav navbar-nav">
-							<li><a href="index.html" title="Bienvenus">Accueil</a></li>
+							<li><a href="#bloc-1-hero" title="Présentation">Accueil</a></li>
 							<li><a href="#bloc-4-portfolio" title="Visitez notre portfolio">Portfolio</a></li>
 							<li><a href="#bloc-2-services" title="Nos compétences">Expertise</a></li>
 							<li><a href="contact.html" title="Contactez-nous">Contact</a></li>
@@ -48,13 +48,14 @@
 			<div class="container bloc-lg">
 				<div class="row tight-width-whitespace">
 					<div class="col-sm-12">
-						<img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="Agence La Panthère, agence web paris, création logo paris" />
-						<h1 class="text-center hero-bloc-text tc-white ">
+						<img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="logo de l'agence  lyonnaise web design la panthère" >
+						<h1 class="text-center hero-bloc-text tc-white">
 							Agence La Panthère
 						</h1>
 						<div class="text-center">
-							<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
-						</div>
+							<a href="contact.html#form_1" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine"
+							  id="cta-hero" title="formulaire de contact">Contact</a>
+						  </div>
 					</div>
 				</div>
 			</div>
@@ -121,7 +122,8 @@
 							Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients .<br>
 						</h2>
 						<p class="text-center white">
-							Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br><a class="ltc-white bold-link" href="contact.html">Contactez notre équipe</a><br>
+							Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br><br>
+							<a class="ltc-white bold-link" href="mailto:contact@agencelapanthere.com">Contactez notre équipe</a>
 						</p>
 					</div>
 				</div>
