--- a/contact.html
+++ b/contact.html
@@ -18,33 +18,7 @@
 		<title>Première Agence Web Design à Lyon Contact</title>
 	</head>
 <body>
-<!-- Principal conteneur --><div class="form-group">
-								<label for="name">Nom</label>
-								<input id="name" class="form-control" required>
-							</div>
-							<div class="form-group">
-								<label for="email">
-									Adresse email
-								</label>
-								<input id="email" class="form-control" type="email" required>
-							</div>
-							<div class="form-group">
-								<label for="input_504">
-									Comment nous avez-vous connu ?
-								</label>
-								<input class="form-control" type="email" required id="input_504">
-							</div>
-							<div class="form-group">
-								<label for="message">
-									Brief de votre projet (Ajoutez autant de détails que nécessaire)<br>
-								</label><textarea id="message" class="form-control" rows="4" cols="50" required></textarea>
-							</div>
-							<div class="text-center"> 
-								<button class="bloc-button btnbtn-clean btn-rd cta-hero btn-atomic-tangerine" type="submit">
-								Envoyer
-								</button>
-							</div>
-						</form>
+<!-- Principal conteneur -->
 	<main class="page-container">
 		<!-- bloc-0 -->
 		<section class="bloc bgc-white l-bloc " id="bloc-0">
@@ -138,7 +112,7 @@
 		<div class="container bloc-sm">
 			<div class="row">
 				<p class="text-center white">Agence Web Design La Panthère</p>
-				<p class="text-center white">contact@agencelapanthere.com<br />2 place Sathonay 69001 Lyon</p>
+				<p class="text-center white">contact@agencelapanthere.com<br/>2 place Sathonay 69001 Lyon</p>
 				<div class="row row-no-gutters social">
 					<a class="social" href="https://twitter.com/" aria-label="Twitter" title="Suivez-nous sur Twitter"
 					target="_blank"><i class="fa fa-twitter icon-md"></i></a>
