--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
 		<section class="bloc bgc-white l-bloc" id="bloc-2-services">
 			<div class="container bloc-md">
 				<div class="row">
-					<div class="col-sm-12 text-center">
-						<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title.png" />
-					</div>
+					<h2 class="col-sm-12 text-center">
+						L'agence La Panthère est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet
+					</h2>
 				</div>
 				<div class="row voffset-lg med-width-whitespace">
 					<div class="col-sm-4">
@@ -78,7 +78,7 @@
 							Web design
 						</h3>
 						<p class="text-center ">
-							Que vous ayez un site web qui a besoin d&rsquo;un rafraîchissement ou que vous partiez de zéro, laissez-nous vous réaliser un design dont vous serez fier.
+							Que vous ayez un site web qui a besoin d'un rafraîchissement ou que vous partiez de zéro, laissez-nous vous réaliser un design dont vous serez fier.
 						</p>
 					</div>
 					<div class="col-sm-4">
@@ -106,8 +106,10 @@
 				</div>
 				<div class="row voffset-lg voffset">
 					<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-						<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/citation.png" />
-
+						<blockquote class="temoignage">
+							"L'agence la Panthére est une excellente agence web ! Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intègrer à notre site. Cela nous a aide à doubler nos ventes en ligne à Lyon."
+						</blockquote>
+							<p class="temoignage">Maxime Guibard, PDG de A vos fourchettes</p>
 					</div>
 				</div>
 			</div>
@@ -135,7 +137,7 @@
 			<div class="container bloc-lg">
 				<div class="row">
 					<div class="col-sm-12 text-center">
-						<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title2.png" />
+						<h2>Nous travaillons avec beaucoup de clients, <br> voici nos réalisations</h2>
 					</div>
 				</div>
 				<div class="row tight-width-whitespace portfolio-row">
