--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 			<div class="container bloc-lg">
 				<div class="row tight-width-whitespace">
 					<div class="col-sm-12">
-						<img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="logo de l'agence  lyonnaise web design la panthère" >
+						<img src="img/logo.avif" class="center-block image-resize-mode" width="100" alt="logo de l'agence  lyonnaise web design la panthère" >
 						<h1 class="text-center hero-bloc-text tc-white">
 							Agence La Panthère
 						</h1>
@@ -142,42 +142,63 @@
 				</div>
 				<div class="row tight-width-whitespace portfolio-row">
 					<div class="col-sm-6">
-						<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1.jpg" alt="paris web design logo agence web meilleure agence et refonte site web journal" class="img-responsive portfolio-thumb" /></a>
-						<h3 class="mg-md text-center">
-							Refonte d'un site web pour un journal local
-						</h3>
-						<p class="text-center">
-							Nous avons créé une nouvelle identité visuelle pour un journal lyonnais.
-						</p>
+					  <a href="#" data-lightbox="img/journal.avif" data-gallery-id="gallery-1"
+						data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb">
+						<img src="img/journal.avif" class="img-responsive portfolio-thumb"
+						  alt="Refonte site web journal local" width="320" height="320">
+					  </a>
+					  <h3 class="mg-md text-center text-width">
+						Refonte d'un site web pour un journal local
+					  </h3>
+					  <p class="mg-md text-center text-width">
+						Nous avons créé une nouvelle identité visuelle pour un journal
+						lyonnais.
+					  </p>
 					</div>
 					<div class="col-sm-6">
-						<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2.jpg" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour photographes" /></a>
-						<h3 class="mg-md text-center">
-							Création d'un site web pour photographes
-						</h3>
-						<p class="text-center">
-							Nous avons conçu la plateforme idéale pour laisser place aux clichés des photographes.
-						</p>
+					  <a href="#" data-lightbox="img/photographe.avif" data-gallery-id="gallery-1"
+						data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb">
+						<img src="img/photographe.avif" class="img-responsive portfolio-thumb"
+						  alt="Création d'une plateforme pour photographes" width="320" height="320" >
+					  </a>
+					  <h3 class="mg-md text-center text-width">
+						Création d'un site web pour photographes
+					  </h3>
+					  <p class="mg-md text-center text-width">
+						Nous avons conçu la plateforme idéale pour laisser place aux
+						clichés des photographes.
+					  </p>
 					</div>
-				</div>
-				<div class="row tight-width-whitespace portfolio-row">
+				  </div>
+				  <div class="row tight-width-whitespace portfolio-row">
 					<div class="col-sm-6">
-						<a href="#" data-lightbox="img/3.bmp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.bmp" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour voyageur"/></a>
-						<h3 class="mg-md text-center">
-							Création d'un site internet pour un voyageur
-						</h3>
-						<p class="text-center">
-							Nous avons élaboré un site internet et des illustrations pour sublimer les vidéos et les articles de ce voyageur.
-						</p>
+					  <a href="#" data-lightbox="img/voyageur.avif" data-gallery-id="gallery-1"
+						data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb">
+						<img src="img/voyageur.avif" class="img-responsive portfolio-thumb"
+						  alt="Création d'un site web pour voyageur" width="320" height="320" loading="lazy">
+					  </a>
+					  <h3 class="mg-md text-center text-width">
+						Création d'un site internet pour un voyageur
+					  </h3>
+					  <p class="mg-md text-center text-width">
+						Nous avons élaboré un site internet et des illustrations pour
+						sublimer les vidéos et les articles de ce voyageur.
+					  </p>
 					</div>
 					<div class="col-sm-6">
-						<a href="#" data-lightbox="img/4.bmp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.bmp" class="img-responsive portfolio-thumb" alt="paris web design logo agence web meilleure agence, Création d'un site web pour agence de mariage" /></a>
-						<h3 class="mg-md text-center">
-							Conception d'un site pour une agence de mariage
-						</h3>
-						<p class="text-center">
-							Nous avons travaillé avec cette agence pour créer un site internet permettant la présentation détaillée de leurs prestations.
-						</p>
+					  <a href="#" data-lightbox="img/mariage.avif" data-gallery-id="gallery-1"
+						data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb">
+						<img src="img/mariage.avif" class="img-responsive portfolio-thumb"
+						  alt="Création d'un site web pour agence de mariage" width="320" height="320" loading="lazy">
+					  </a>
+					  <h3 class="mg-md text-center text-width">
+						Conception d'un site pour une agence de mariage
+					  </h3>
+					  <p class="mg-md text-center text-width">
+						Nous avons travaillé avec cette agence pour créer un site
+						internet permettant la présentation détaillée de leurs
+						prestations.
+					  </p>
 					</div>
 				</div>
 			</div>
