--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<div class="container bloc-sm">
 				<nav class="navbar row">
 					<div class="navbar-header">
-						<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="logo de l'entreprise webdesign la panthère" height="40" /></a>
+						<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg" alt="logo de l'entreprise webdesign la panthère" height="40" width="200"></a>
 						<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 							<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 						</button>
@@ -48,7 +48,7 @@
 			<div class="container bloc-lg">
 				<div class="row tight-width-whitespace">
 					<div class="col-sm-12">
-						<img src="img/logo.avif" class="center-block image-resize-mode" width="100" alt="logo de l'agence  lyonnaise web design la panthère" >
+						<img src="img/logo.avif" class="center-block image-resize-mode" width="100" height="100" alt="logo de l'agence  lyonnaise web design la panthère" >
 						<h1 class="text-center hero-bloc-text tc-white">
 							Agence La Panthère
 						</h1>
@@ -107,7 +107,7 @@
 				<div class="row voffset-lg voffset">
 					<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
 						<blockquote class="temoignage">
-							"L'agence la Panthére est une excellente agence web ! Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intègrer à notre site. Cela nous a aide à doubler nos ventes en ligne à Lyon."
+							"L'agence la Panthère est une excellente agence web ! Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intègrer à notre site. Cela nous a aide à doubler nos ventes en ligne à Lyon."
 						</blockquote>
 							<p class="temoignage">Maxime Guibard, PDG de A vos fourchettes</p>
 					</div>
