--- a/contact.html
+++ b/contact.html
@@ -101,7 +101,7 @@
 	</main>
 	<!-- Principal conteneur END -->
 	<!-- Footer - bloc-8 -->
-	<footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
+	<footer class="bloc bgc-atomic-tangerine" id="bloc-8">
 		<div class="container bloc-sm">
 			<div class="row">
 				<p class="text-center white">Agence Web Design La Panthère</p>
