--- a/index.html
+++ b/index.html
@@ -4,16 +4,19 @@
     <meta charset="utf-8">
 	<meta name="description" content=" A Lyon, La Panthère est une agence de web design dotée d’une équipe de graphistes talentueux. Après étude sérieuse de vos objectifs commerciaux, l’agence aide votre entreprise à créer son site internet unique pour se démarquer de vos concurrents.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-	<meta http-equiv="cache-control" content="no-cache">
+	<meta http-equiv="Content-Security-Policy" content="script-src 'self'; object-src 'none'">
 	<meta name="robots" content="all">
     
 	<link rel="canonical" href="https://lysianebo.github.io/LaPanthere/">
-	<link rel="shortcut icon" type="image/jpg" href="img/favicon.jpg">
+	<link rel="shortcut icon" type="image/jpg" href="img/favicon.avif">
 
     <link rel="stylesheet" type="text/css" href="css/et-line.css">
     <link rel="stylesheet" type="text/css" href="css/font-awesome.css">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+
+	
+	
 
     <title>Première Agence Web Design à Lyon Contact</title>
     
@@ -22,7 +25,7 @@
 	<!-- Principal conteneur -->
 	<main class="page-container">
 		<!-- bloc-0 -->
-		<section class="bloc bgc-white l-bloc " id="bloc-0">
+		<div class="bloc bgc-white l-bloc " id="bloc-0">
 			<div class="container bloc-sm">
 				<nav class="navbar row">
 					<div class="navbar-header">
@@ -41,7 +44,7 @@
 					</div>
 				</nav>
 			</div>
-		</section>
+		</div>
 		<!-- bloc-0 END -->
 		<!-- bloc-1-presentation -->
 		<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero">
@@ -219,7 +222,7 @@
 		<div class="container bloc-sm">
 			<div class="row">
 				<p class="text-center white">Agence Web Design La Panthère</p>
-				<p class="text-center white">contact@agencelapanthere.com<br />2 place Sathonay 69001 Lyon</p>
+				<p class="text-center white">contact@agencelapanthere.com<br>2 place Sathonay 69001 Lyon</p>
 				<div class="row row-no-gutters social">
 					<a class="social" href="https://twitter.com/" aria-label="Twitter" title="Suivez-nous sur Twitter"
 					target="_blank"><i class="fa fa-twitter icon-md"></i></a>
