--- a/contact.html
+++ b/contact.html
@@ -125,7 +125,7 @@
       <script async src="js/bootstrap.min.js"></script>
       <script async src="js/blocs.min.js"></script>
       <script async src="js/jquery.touchSwipe.min.js"></script>
-	  <script async src="./js/jqBootstrapValidation.min.js"></script>
-	  <script async src="./js/formHandler.min.js"></script>
+	  <script async src="/js/jqBootstrapValidation.min.js"></script>
+	  <script async src="/js/formHandler.min.js"></script>
 </body>
 </html>
