--- a/contact.html
+++ b/contact.html
@@ -119,8 +119,14 @@
     </footer>
 	<!-- Footer - bloc-8 END -->
     <!-- Scripts -->
-	  <script src="js/jquery-2.1.0.min.js"></script>
-      <script async src="js/bootstrap.min.js"></script>
+	  <!-- <script src="js/jquery-2.1.0.min.js"></script> -->
+	  <script
+			  src="https://code.jquery.com/jquery-3.6.3.min.js"
+			  integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU="
+			  crossorigin="anonymous"></script>
+		
+      <!-- <script async src="js/bootstrap.min.js"></script> -->
+	  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
       <script async src="js/blocs.min.js"></script>
       <script async src="js/jquery.touchSwipe.min.js"></script>
 	  <script async src="/js/jqBootstrapValidation.min.js"></script>
